--- a/main.css
+++ b/main.css
@@ -77,8 +77,6 @@ body {
     align-items: center;
     justify-content: center;
     background-color: turquoise;
-
-    background-color: #03afff;
     border: 1px black solid;
     border-radius: 4px;
     transition: transform 0.3s ease-in-out;
@@ -137,6 +135,93 @@ body {
 
 .hidden {
     display: none;
+}
+
+/* Modal sign up */
+.modal {
+    /* display: none; */
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    overflow: auto;
+    padding-top: 5rem;
+}
+
+.modal__form {
+    background-color: #fefefe;
+    margin: 5vh auto 15vh auto;
+    border: 1px solid #888;
+    width: 80vw;
+    max-width: 35rem;
+    border-radius: 5px;
+}
+
+.modal__form-div {
+    padding: 2vh;
+}
+
+.modal__form-div-h2 {
+    font-size: 2rem;
+}
+
+hr {
+    border: 1px solid #f1f1f1;
+    margin-bottom: 2.5rem;
+}
+
+.modal__form-div-label {
+    font-size: 1.8rem;
+}
+
+.modal__form-div-input {
+    width: 100%;
+    padding: 1vh;
+    font-size: 1.6rem;
+    border: none;
+    display: inline-block;
+    background-color: var(--light-dark);
+    border-radius: 5px;
+}
+
+input[type=text]:focus, input[type=password]:focus {
+    /* background-color: var(--middle-dark); */
+    outline: none;
+}
+
+.btn {
+    background-color: transparent;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    font-size: 1.3rem;
+    font-weight: 600;
+    border-radius: 5px;
+    margin-top: 6vh;
+}
+
+.btn:hover {
+    background-color:  var(--light-dark);
+    opacity:1;
+}
+
+.cancelbtn {
+    float: left;
+    width: 45%;
+}
+
+.signupbtn {
+    float: right;
+    width: 45%;
+}
+
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
 }
 
 /* Media Queries */
