--- a/main.css
+++ b/main.css
@@ -137,7 +137,7 @@ body {
     display: none;
 }
 
-/* Modal sign up */
+/* Modal log in */
 .modal {
     /* display: none; */
     position: fixed;
@@ -172,6 +172,7 @@ hr {
 }
 
 .modal__form-div-label {
+    margin-top: 2vh;
     font-size: 1.8rem;
 }
 
@@ -197,8 +198,8 @@ input[type=text]:focus, input[type=password]:focus {
     border: none;
     cursor: pointer;
     width: 100%;
-    font-size: 1.3rem;
-    font-weight: 600;
+    font-size: 1.5rem;
+    font-weight: 700;
     border-radius: 5px;
     margin-top: 6vh;
 }
@@ -213,7 +214,7 @@ input[type=text]:focus, input[type=password]:focus {
     width: 45%;
 }
 
-.signupbtn {
+.loginbtn {
     float: right;
     width: 45%;
 }
