--- a/main.css
+++ b/main.css
@@ -138,7 +138,8 @@ body {
     display: none;
 }
 
-/* Modal log in */
+/* Modal Log In form */
+
 .modal {
     /* display: none; */
     position: fixed;
@@ -161,6 +162,7 @@ body {
 
 .modal__form-div {
     padding: 2vh;
+    margin-bottom: 3.5vh;
 }
 
 .modal__form-div-h2 {
@@ -192,6 +194,19 @@ input[type=text]:focus, input[type=password]:focus {
     outline: none;
 }
 
+.invalid-input {
+    width: 100%;
+    padding: 1vh;
+    position: relative;
+    top: -1vh;
+    font-size: 1.2rem;
+    font-weight: 600;
+    color: var(--red-error);
+    text-align: center;
+    border: none;
+    background-color: transparent;
+}
+
 .btn {
     background-color: transparent;
     padding: 14px 20px;
@@ -202,7 +217,6 @@ input[type=text]:focus, input[type=password]:focus {
     font-size: 1.5rem;
     font-weight: 700;
     border-radius: 5px;
-    margin-top: 6vh;
 }
 
 .btn:hover {
@@ -218,6 +232,11 @@ input[type=text]:focus, input[type=password]:focus {
 .loginbtn {
     float: right;
     width: 45%;
+}
+
+.clearfix {
+    position: relative;
+    top: 3vh;
 }
 
 .clearfix::after {
@@ -288,12 +307,4 @@ input[type=text]:focus, input[type=password]:focus {
         border: none;
         padding-left: 1vw;
     }
-}
-
-
-.invalid-input {
-    position: relative;
-    top: -1rem;
-    font-size: 1rem;
-    color: var(--red-error);
 }
