--- a/main.css
+++ b/main.css
@@ -35,6 +35,21 @@ html {
     display: flex;
 }
 
+.header__form {
+    display: flex;
+    align-items: center;
+}
+
+.header__form-input {
+    height: 3.5vh;
+    width: 28vh;
+    font-size: 1.4rem;
+    border-radius: 5px;
+    border: none;
+    padding: 0 1vw;
+    margin: 0 5vw;
+}
+
 .header__button {
     height: 9vh;
     width: 9vh;
@@ -77,7 +92,6 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: turquoise;
     border: 1px black solid;
     border-radius: 4px;
     transition: transform 0.3s ease-in-out;
@@ -302,9 +316,8 @@ input[type=text]:focus, input[type=password]:focus {
 
 @media (min-width: 1000px) {
     .header__form-input {
-        font-size: 2rem;
-        border-radius: 5px;
-        border: none;
-        padding-left: 1vw;
+        height: 5vh;
+        width: 50vh;
+        font-size: 1.5rem;
     }
 }
