--- a/main.css
+++ b/main.css
@@ -66,7 +66,13 @@ html {
 }
 
 #currantUser {
-    margin-right: 3vh;
+    /* margin-right: 3vh; */
+    width: 13vh;
+}
+
+.tab {
+    display: inline-block;
+    margin-left: 10px;
 }
 
 .header__button-user {
